--- a/合作伙伴.html
+++ b/合作伙伴.html
@@ -8,93 +8,93 @@
 <link rel="stylesheet" href="css/style.css">
 
 <style>
-  /* ºÏ×÷»ï°élogo */
+  /* logo */
   #baode-logo{
     position: absolute;
-    right: 360px;
-    bottom: 210px;
+    right: 350px;
+    bottom: 165px;
   }
   #huawei-logo{
     position: absolute;
-    right: 360px;
-    bottom: 150px;
+    right: 230px;
+    bottom: 170px;
   }
   #tongxin-logo{
     position: absolute;
-    right: 370px;
-    bottom: 100px;
+    right: 120px;
+    bottom: 170px;
   }
   #aliyun-logo{
     position: absolute;
-    right: 230px;
-    bottom: 100px;
+    right: 10px;
+    bottom: 170px;
   }
   #jingjiawei-logo{
     position: absolute;
-    right: 230px;
-    bottom: 210px;
+    right: 350px;
+    bottom: 100px;
   }
   #fuxin-logo{
     position: absolute;
-    right: 230px;
-    bottom: 125px;
+    right: 240px;
+    bottom: 80px;
   }
   #logo-360{
     position: absolute;
-    right: 110px;
-    bottom: 160px;
+    right: 130px;
+    bottom: 115px;
   }
   #kdxf-logo{
     position: absolute;
-    right: 110px;
-    bottom: 100px;
+    right: 20px;
+    bottom: 115px;
   }
   #qianxin-logo{
     position: absolute;
-    right: 110px;
-    bottom: 180px;
+    right: 350px;
+    bottom: 30px;
   }
 </style>
 
 </head>
-<body>
+<bod>
 
     <div class="" style="height:100%;display: flex; align-items: center;">
-        <!-- ·ÅºÏ×÷»ï°éLogo -->
-        <div class="huawei-logo" id="huawei-logo1">
-            <img src="images/41-»ªÎª.png" alt="" >
+        <!--Logo -->
+        <div class="huawei-logo" id="huawei-logo">
+            <img src="images/41-åŽä¸º.png" alt="" width="120px">
         </div>
 
-        <div class="tongxin-logo" id="tongxin-logo1">
-            <img src="images\32-Í³ÐÅÈí¼þ.png" alt="" >
+        <div class="tongxin-logo" id="tongxin-logo">
+            <img src="images\32-ç»Ÿä¿¡è½¯ä»¶.png" alt="" width="90px">
         </div>
 
-        <div class="baode-logo" id="baode-logo1">
-            <img src="images\±¦µÂlogo-removebg-preview1.png" alt="" >
+        <div class="baode-logo" id="baode-logo">
+            <img src="images\å®å¾·logo-removebg-preview1.png" alt="" width="100px">
         </div>
 
-        <div class="aliyun-logo" id="aliyun-logo1">
-            <img src="images\27-°¢ÀïÔÆ2-removebg-preview.png" alt="">
+        <div class="aliyun-logo" id="aliyun-logo">
+            <img src="images\27-é˜¿é‡Œäº‘2-removebg-preview.png" alt="" width="100px">
         </div>
 
-        <div class="jingjiawei-logo" id="jingjiawei-logo1">
-            <img src="images\23-¾°¼ÎÎ¢.png" alt="" >
+        <div class="jingjiawei-logo" id="jingjiawei-logo">
+            <img src="images\23-æ™¯å˜‰å¾®.png" alt="" width="120px">
         </div>
 
-        <div class="fuxin-logo" id="fuxin-logo1">
-            <img src="images\30-¸£ê¿.png" alt="">
+        <div class="fuxin-logo" id="fuxin-logo">
+            <img src="images\30-ç¦æ˜•.png" alt="" width="100px">
         </div>
 
         <div class="logo-360" id="logo-360">
-            <img src="images\1-360.png" alt="" >
+            <img src="images\1-360.png" alt="" width="100px">
         </div>
 
-        <div class="kdxf-logo" id="kdxf-logo1">
-            <img src="images\36-¿Æ´óÑ¶·É1.png" alt="" >
+        <div class="kdxf-logo" id="kdxf-logo">
+            <img src="images\36-ç§‘å¤§è®¯é£ž1.png" alt="" width="100px">
         </div>
 
-        <div class="qianxin-logo" id="qianxin-logo1">
-            <img src="images\14-Ææ°²ÐÅ.png" alt="" >
+        <div class="qianxin-logo" id="qianxin-logo">
+            <img src="images\14-å¥‡å®‰ä¿¡.png" alt="" width="100px">
         </div>
     </div>
 </body>
